--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
 						<configuration>
 							<inputSpec>${project.basedir}/src/main/resources/openapi/integrationApi.yaml
 							</inputSpec>
-							<modelPackage>eu.ecomind.gshub.interview.web.model</modelPackage>
+							<modelPackage>eu.ecomind.interview.web.model</modelPackage>
 						</configuration>
 					</execution>
 				</executions>
