--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>eu.ecomind</groupId>
 	<artifactId>interview</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.2</version>
 	<name>interview</name>
 	<description>Interview project</description>
 
